# matrix-bots

./: Cargo.toml  dist-workspace.toml  renovate.json
.github/workflows/: images.json  release-image.yml  release.yml
crates/matrix-sed/: Cargo.toml  Dockerfile
crates/matrix-sed/src/: cache.rs  handlers.rs  main.rs
