[package]
name = "matrix-sed"
version = "0.0.1"
edition = "2021"
repository.workspace = true

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive", "env"] }
matrix-sdk = { version = "0.7.1", features = ["anyhow", "bundled-sqlite"] }
regex = "1.11.1"
rpassword = "7.3.1"
sedregex = "0.2.5"
similar = "2.6.0"
tokio = { version = "1.41.0", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
