[package]
name = "matrix-sed"
version = "0.0.10"
edition = "2021"
repository.workspace = true

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.2"
dirs = "5.0.1"
futures-util = "0.3.31"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", features = ["anyhow", "bundled-sqlite"] }
rand = "0.8.5"
regex = "1.11.1"
rpassword = "7.3.1"
sedregex = "0.2.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
similar = "2.6.0"
tokio = { version = "1.41.0", features = ["rt"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
